kubernetes-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mynginxapp
  labels:
    name: mynginxapp
