kubernetes-manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: myflaskapp
  labels:
    app: myflaskapp
  namespace: dev
spec:
  selector:
    app: myflaskapp
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  type: ClusterIP
